# P23-DV

./: .gitignore  .gitmodules  README.md  requirements.txt  ros2_foxy_installation.sh
C++/: CMakeCache.txt  (+5 more)
MPC/mpc_official/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.MD  cmake_install.cmake  interface.cpp  interface.h  mpc_cpp
MPC/mpc_official/FORCESNLPsolver/: FORCESNLPsolver_interface.c
MPC/mpc_official/FORCESNLPsolver/include/: FORCESNLPsolver.h  FORCESNLPsolver_memory.h
MPC/mpc_official/FORCESNLPsolver/interface/: FORCESNLPsolver_build.py  FORCESNLPsolver_dynamics_mex.c  FORCESNLPsolver_inequalities_mex.c  FORCESNLPsolver_lib.mdl  FORCESNLPsolver_mex.c  FORCESNLPsolver_objective_mex.c  FORCESNLPsolver_simulinkBlockcompact.c  FORCESNLPsolvercompact_lib.mdl  definitions.py
MPC/mpc_official/data/: cubic_spline_data.txt
PathPlanning/Splines/: CMakeLists.txt  README.md  arc_length.sh  b_spline.sh  cubic_spline.sh  spline_log.txt  visualize.py  visualize_from_log.py
PathPlanning/Splines/include/: b-spline.h  cubic_spline.h  read_track.h  solve_tridiagonal.h
PathPlanning/Splines/src/: arc_length_spline_main.cpp  b-spline.cpp  b-spline_main.cpp  cubic_spline.cpp  cubic_spline_main.cpp  test_banded.cpp
PathPlanning/Splines/test_tracks/: thomaidio_midpoints.txt
Perception/Lidar/Clustering/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.MD  cloud_cluster_0000.pcd  cloud_cluster_0001.pcd  cloud_cluster_0002.pcd  cloud_cluster_0003.pcd  cloud_cluster_0004.pcd  cloud_cluster_0005.pcd  cloud_cluster_0006.pcd  cloud_cluster_0007.pcd  cloud_cluster_0008.pcd  cloud_cluster_0009.pcd  cloud_cluster_0010.pcd  cloud_cluster_0011.pcd  cloud_cluster_0012.pcd  cloud_cluster_0013.pcd  cloud_cluster_0014.pcd  cloud_cluster_0015.pcd  cloud_cluster_0016.pcd  cloud_cluster_0017.pcd  cloud_cluster_0018.pcd  cloud_cluster_0019.pcd  cloud_cluster_0020.pcd  cloud_cluster_0021.pcd  cloud_cluster_0022.pcd  cloud_cluster_0023.pcd  cloud_cluster_0024.pcd  cloud_cluster_0025.pcd  cloud_cluster_0026.pcd  cloud_cluster_0027.pcd  cloud_cluster_0028.pcd  cloud_cluster_0029.pcd  cloud_cluster_0030.pcd  cloud_cluster_0031.pcd  (+206 more)
Perception/Lidar/Clustering/DataError/distances/: blue_10_clusters.csv  blue_11_clusters.csv  blue_12_clusters.csv  blue_1_clusters.csv  blue_2_clusters.csv  blue_3_clusters.csv  blue_4_clusters.csv  blue_5_clusters.csv  blue_6_clusters.csv  blue_7_clusters.csv  blue_8_clusters.csv  blue_9_clusters.csv  calibration_feta_cluster.csv  yellow_10_clusters.csv  yellow_11_clusters.csv  yellow_1_clusters.csv  yellow_2_clusters.csv  yellow_3_clusters.csv  yellow_4_clusters.csv  yellow_5_clusters.csv  yellow_6_clusters.csv  yellow_7_clusters.csv  yellow_8_clusters.csv  yellow_9_clusters.csv
Perception/Lidar/Clustering/DataError/lidar/: blue_1.csv  blue_10.csv  blue_11.csv  blue_12.csv  blue_2.csv  blue_3.csv  blue_4.csv  blue_5.csv  blue_6.csv  blue_7.csv  blue_8.csv  blue_9.csv  calibration_feta.csv  yellow_1.csv  yellow_10.csv  yellow_11.csv  yellow_2.csv  yellow_3.csv  yellow_4.csv  yellow_5.csv  yellow_6.csv  yellow_7.csv  yellow_8.csv  yellow_9.csv
Perception/Lidar/Clustering/DataError/pcd/: cloud_cluster_box.pcd  cloud_cluster_final.pcd  cloud_cluster_init.pcd  cloud_cluster_segm.pcd
Perception/Lidar/Clustering/DataError2/: output_clustering.csv
Perception/Lidar/Clustering/DataError2/distances/: blue_01_clusters.csv  blue_02_clusters.csv  blue_03_clusters.csv  blue_04_clusters.csv  blue_05_clusters.csv  blue_06_clusters.csv  blue_07_clusters.csv  blue_08_clusters.csv  blue_09_clusters.csv  blue_10_clusters.csv  blue_11_clusters.csv  calibration1_clusters.csv  (+9 more)
Perception/Lidar/Clustering/DataKsi/: cloud_cluster_box.pcd  cloud_cluster_final.pcd  cloud_cluster_ksi.pcd  cloud_cluster_segm.pcd
Perception/Lidar/Clustering/DataKsi2/: output_clustering.csv
Perception/Lidar/Clustering/config/: params.json
Perception/Lidar/Clustering/src/: clustering.cpp  clustering.h
ROS_Workspace/src/0.Master/custom_msgs/: CMakeLists.txt  package.xml
ROS_Workspace/src/0.Master/node_logger/: CMakeLists.txt  package.xml  setup.py
ROS_Workspace/src/0.Master/p23_status/: CMakeLists.txt  package.xml
ROS_Workspace/src/1.Drivers/can_reader_cpp/: CMakeLists.txt  package.xml
ROS_Workspace/src/1.Drivers/hesai_lidar/: CMakeLists.txt  package.xml
ROS_Workspace/src/2.Perception/lidarCpp/: CMakeLists.txt  package.xml
ROS_Workspace/src/3.VelocityEstimation/velocity_estimation/: CMakeLists.txt  package.xml
ROS_Workspace/src/4.SLAM/ekf_slam/: CMakeLists.txt  package.xml
ROS_Workspace/src/4.SLAM/slam/: CMakeLists.txt  package.xml  track.py
ROS_Workspace/src/5.PathPlanning/path_planner/: CMakeLists.txt  package.xml
ROS_Workspace/src/5.PathPlanning/splines/: CMakeLists.txt  package.xml
ROS_Workspace/src/6.Controls/mpc_new/: CMakeLists.txt  package.xml
ROS_Workspace/src/6.Controls/pid_pp_controller/: CMakeLists.txt  package.xml
ROS_Workspace/src/6.Controls/simple_sim/: CMakeLists.txt  package.xml
SLAM/graph_slam/: CMakeLists.txt  package.xml
SLAM/graph_slam/src/: graph_slam_handler.cpp
Velocity_Estimation_Sensor_Drivers/src/custom_msgs/: CMakeLists.txt  package.xml
Velocity_Estimation_Sensor_Drivers/src/custom_msgs/msg/: HallSensors.msg  Trash.msg  VelEstimation.msg
Velocity_Estimation_Sensor_Drivers/src/velocity_estimation/: CMakeLists.txt  package.xml
Velocity_Estimation_Sensor_Drivers/src/velocity_estimation/config/: params.yaml
Velocity_Estimation_Sensor_Drivers/src/velocity_estimation/include/: velocity_estimation.h  velocity_estimation_common.h  velocity_estimation_handler.h
Velocity_Estimation_Sensor_Drivers/src/velocity_estimation/launch/: velocity_estimation.launch.py
Velocity_Estimation_Sensor_Drivers/src/velocity_estimation/src/: main.cpp  velocity_estimation.cpp  velocity_estimation_handler.cpp
simulation/src/3_path_planning/path_planning_code/: CMakeLists.txt  package.xml
(+1438 files in other folders)
