<?xml version="1.0"?>
<package format="2">
  <name>path_planning_code</name>
  <version>0.0.0</version>
  <description>The path_planning_code package</description>
  <maintainer email="dimitris@todo.todo">dimitris</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>fsd_common_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
